src/test/ui/consts/const-mut-refs/const_mut_address_of.stderr
error[E0764]: mutable references are not allowed in constants
  --> $DIR/const_mut_address_of.rs:24:5
   |
LL |     foo().bar();
   |     ^^^^^ `&mut` is only allowed in `const fn`

error[E0764]: mutable references are not allowed in constants
  --> $DIR/const_mut_address_of.rs:26:9
   |
LL |     baz(&mut foo());
   |         ^^^^^^^^^^ `&mut` is only allowed in `const fn`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0764`.
